; ModuleID = '/home/carl/AnghaBench/freebsd/tools/regression/tmpfs/extr_h_tools.c_statvfs_main.c'
source_filename = "/home/carl/AnghaBench/freebsd/tools/regression/tmpfs/extr_h_tools.c_statvfs_main.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.statfs = type { i64, i64, i64, i64, i32 }

@EXIT_FAILURE = common dso_local global i32 0, align 4
@STATFS_VERSION = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [8 x i8] c"statvfs\00", align 1
@.str.1 = private unnamed_addr constant [13 x i8] c"f_bsize=%ju\0A\00", align 1
@.str.2 = private unnamed_addr constant [14 x i8] c"f_blocks=%ju\0A\00", align 1
@.str.3 = private unnamed_addr constant [13 x i8] c"f_bfree=%ju\0A\00", align 1
@.str.4 = private unnamed_addr constant [13 x i8] c"f_files=%ju\0A\00", align 1
@EXIT_SUCCESS = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @statvfs_main(i32 %0, i8** %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i8**, align 8
  %6 = alloca i32, align 4
  %7 = alloca %struct.statfs, align 8
  store i32 %0, i32* %4, align 4
  store i8** %1, i8*** %5, align 8
  %8 = load i32, i32* %4, align 4
  %9 = icmp slt i32 %8, 2
  br i1 %9, label %10, label %12

10:                                               ; preds = %2
  %11 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %11, i32* %3, align 4
  br label %43

12:                                               ; preds = %2
  %13 = call i32 @memset(%struct.statfs* %7, i32 0, i32 40)
  %14 = load i32, i32* @STATFS_VERSION, align 4
  %15 = getelementptr inbounds %struct.statfs, %struct.statfs* %7, i32 0, i32 4
  store i32 %14, i32* %15, align 8
  %16 = load i8**, i8*** %5, align 8
  %17 = getelementptr inbounds i8*, i8** %16, i64 1
  %18 = load i8*, i8** %17, align 8
  %19 = call i32 @statfs(i8* %18, %struct.statfs* %7)
  store i32 %19, i32* %6, align 4
  %20 = load i32, i32* %6, align 4
  %21 = icmp ne i32 %20, 0
  br i1 %21, label %22, label %25

22:                                               ; preds = %12
  %23 = call i32 @perror(i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0))
  %24 = load i32, i32* @EXIT_FAILURE, align 4
  store i32 %24, i32* %3, align 4
  br label %43

25:                                               ; preds = %12
  %26 = getelementptr inbounds %struct.statfs, %struct.statfs* %7, i32 0, i32 3
  %27 = load i64, i64* %26, align 8
  %28 = trunc i64 %27 to i32
  %29 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.1, i64 0, i64 0), i32 %28)
  %30 = getelementptr inbounds %struct.statfs, %struct.statfs* %7, i32 0, i32 2
  %31 = load i64, i64* %30, align 8
  %32 = trunc i64 %31 to i32
  %33 = call i32 @printf(i8* getelementptr inbounds ([14 x i8], [14 x i8]* @.str.2, i64 0, i64 0), i32 %32)
  %34 = getelementptr inbounds %struct.statfs, %struct.statfs* %7, i32 0, i32 1
  %35 = load i64, i64* %34, align 8
  %36 = trunc i64 %35 to i32
  %37 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.3, i64 0, i64 0), i32 %36)
  %38 = getelementptr inbounds %struct.statfs, %struct.statfs* %7, i32 0, i32 0
  %39 = load i64, i64* %38, align 8
  %40 = trunc i64 %39 to i32
  %41 = call i32 @printf(i8* getelementptr inbounds ([13 x i8], [13 x i8]* @.str.4, i64 0, i64 0), i32 %40)
  %42 = load i32, i32* @EXIT_SUCCESS, align 4
  store i32 %42, i32* %3, align 4
  br label %43

43:                                               ; preds = %25, %22, %10
  %44 = load i32, i32* %3, align 4
  ret i32 %44
}

declare dso_local i32 @memset(%struct.statfs*, i32, i32) #1

declare dso_local i32 @statfs(i8*, %struct.statfs*) #1

declare dso_local i32 @perror(i8*) #1

declare dso_local i32 @printf(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
